--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -724,13 +724,8 @@ section {
 }
 
 /* FIXME: biri pozulmaly sonra */
-.back-img-1 {
-  opacity: .8;
-}
-
-/* FIXME: biri pozulmaly sonra */
 .back-img {
-  opacity: 1;
+  opacity: .8;
 }
 
 .middle-img {
@@ -2103,7 +2098,7 @@ th[scope=row] {
 .gallery {
   display: flex;
   flex-direction: row;
-  width: 99%;
+  width: 95%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
@@ -2118,35 +2113,34 @@ th[scope=row] {
 }
 
 .gallery__card {
-  width: auto;
-  height: 600px;
+  --card-height: 30rem;
   position: relative;
-  /* transition: all 0.5s ease-in-out; */
+  width:auto;git 
 }
 
 .gallery__text {
-  width: 24rem;
   background-color: white;
-  position: absolute;
-  top: 1%;
-  left: 20%;
-  opacity: 0;
   border-radius: var(--border-radius-button);
-  outline: 1px var(--color-blue) solid;
-  outline-offset: -0.2rem;
-  text-align: center;
-  height: fit-content;
-  margin: 0.2rem;
-  padding: 0.2rem;
-  font-size: 30px;
+  font-size:18px;
   font-weight: bold;
-  z-index: 2;
+  height:fit-content;
+  left: 20%;
+  margin: 0.2rem;
+  opacity: 0;
+  outline-offset: -0.2rem;
+  outline: 1px var(--color-blue) solid;
+  padding:0.2rem;
+  position: absolute;
+  text-align: center;
+  top: 1%;
   transition: all 1s ease-in-out;
+  width: 15rem;
+  z-index: 2;
 }
 
 .gallery__card img {
   width: 100%;
-  height: 600px;
+  height: var(--card-height);
   z-index: 1;
   border-radius: var(--border-radius-button);
   transition: all 0.5s ease-in-out;
