--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2394,3 +2394,12 @@ margin-right: 40px;
   border: gray solid 0.1px;
 }
 
+.flags {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  margin-left: -10px;
+  margin-right: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
