--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2475,3 +2475,10 @@ margin-right: 40px;
 #services .flip-box-front .white-color {
   color: white;
 }
+
+.adresler {
+  width: 40ch;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
